insex.html me changes ki

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		
 		<!-- Title -->
-        <title>plus - Free cal and Doctor Directory HTML Template.</title>
+        <title>docto-plus</title>
 		
 		<!-- Favicon -->
         <link rel="icon" href="img/favicon.png">
